fix min height on title (when no dates, icon truncated)

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
    color: #000;
    font-size: 18px;
    padding: 5px;
+   min-height: 45px;
 }
 
 .plugin_news_alert-content {
